Fixed timeline text alignments for ES and BR

--- a/docs/styles.css
+++ b/docs/styles.css
@@ -943,6 +943,10 @@ video {
   margin-left: 0.5rem;
 }
 
+.ml-4{
+  margin-left: 1rem;
+}
+
 .mr-3{
   margin-right: 0.75rem;
 }
@@ -1566,7 +1570,7 @@ video {
   }
 
   .sm\:h-2\/3{
-    margin-top: 3rem;
+    margin-top: 1.5rem;
     margin-bottom: 1rem;
     line-height: 1.25rem;
     max-height: 20rem;
@@ -1674,6 +1678,10 @@ video {
 
   .md\:text-5xl{
     font-size: 3rem;
+  }
+
+  .md\:ml-5{
+    margin-left: 1rem;
   }
 
   .md\:my-0{
@@ -1887,9 +1895,14 @@ video {
     margin-bottom: 16rem;
   }
 
+  .lg\:mr-4{
+    margin-right: 1rem;
+  }
+
   .lg\:pb-40{
     padding-bottom: 10rem;
   }
+
 
   .lg\:w-1\/2{
     width: 50%;
@@ -1965,6 +1978,14 @@ video {
 
   .xl\:mt-0{
     margin-top: 0;
+  }
+
+  .xl\:ml-5{
+    margin-left: 1rem;
+  }
+
+  .xl\:w-1\/3{
+    width: 33.333333%;
   }
 
   .xl\:w-1\/2{
